# PTOAS

./: CMakeLists.txt  README.md  README_en.md  ReleaseNotes.md  _ptoas_build_backend.py  pyproject.toml
test/lit/: CMakeLists.txt
test/lit/pto/: alloc_tile_physical_overlap_sync.pto  comm_p2p_emitc.pto  debug_name_hints_multi_result_emitc.pto  get_validshape_emitc.pto  issue696_scalar_gm_store_flush.pto  issue711_tnotify_mte_drain.pto  issue783_canonicalize_rank2_dn_views.pto  issue870_identity_tmov_pruning.pto  issue872_tput_tnotify_release.pto  memory_consistency_invalid.pto  memory_consistency_loop_release.pto  memory_consistency_noninline_call_invalid.pto  mgather_mscatter_a5_attrs_emitc.pto  mgather_mscatter_base_a3_emitc.pto  multi_tile_affine_disjoint_slots.pto  multi_tile_buf_n3_planmem_e2e.pto  multi_tile_buf_type_parse_print.pto  multi_tile_buf_verify_count.pto  multi_tile_const_preload_dyn_loop_select.pto  multi_tile_const_slot_disjoint_sync.pto  multi_tile_const_slot_gss_compiles.pto  multi_tile_dyn_slot_conservative_sync.pto  multi_tile_get_const_slot_lowering.pto  multi_tile_get_dyn_slot_lowering.pto  multi_tile_get_verify_slot.pto  multi_tile_level3_explicit_addr.pto  multi_tile_level3_missing_addr.pto  multi_tile_n4_planmem_e2e.pto  multi_tile_no_loop_unroll.pto  multi_tile_prefetch_dyn_event_id.pto  multi_tile_prefetch_gss_event_id.pto  multi_tile_reject_row_plus_one.pto  multi_tile_two_buf_slot_binding.pto  multi_tile_unknown_slot_gss_dyn_event_id.pto  plan_memory_reused_tstore_sync_level2.pto  section_simt_roundtrip.pto  section_simt_syncthreads_roundtrip.pto  section_simt_verify_invalid_negative_dim.pto  section_simt_verify_invalid_nested.pto  section_simt_verify_invalid_simt_entry.pto  (+5 more)
test/lit/tile_fusion/: fusion_computed_dynamic_shape_e2e.pto  fusion_reduce_computed_dynamic_shape_e2e.pto  mark_last_use_slot_mask_level2.pto  op_fusion_backend_lifecycle_level3.pto  op_fusion_frontend_stages_level2.pto  op_fusion_low_level_loop_dynamic_shape.pto  op_fusion_low_level_loop_reduce_epilogue.pto  op_fusion_low_level_loop_softmax_prepare_unaligned_nopad.pto
test/lit/vmi/: vmi_ensure_layout_surface_invalid.pto  vmi_group_reduce_addi_i16.pto  vmi_group_reduce_addi_i8.pto  vmi_group_reduce_maxi_i8.pto  vmi_interleaved_memory_ops.pto  vmi_interleaved_memory_ops_invalid.pto  vmi_lane_stride_masked_store.pto  vmi_layout_assignment_broadcast_dense_group_users.pto  vmi_layout_assignment_create_group_mask_s32_dynamic.pto  vmi_layout_assignment_dense_f16_f32_store.pto  vmi_layout_assignment_dense_group_reduce_multi_consumer.pto  vmi_layout_assignment_f32_f8_store_reduce.pto  vmi_layout_assignment_group_broadcast_multi_consumer.pto  vmi_layout_assignment_group_reduce_half_block.pto  vmi_layout_assignment_group_reduce_maxf_quant.pto  vmi_layout_assignment_group_reduce_partial_slots8.pto  vmi_layout_assignment_group_reduce_s64_truncf.pto  vmi_layout_assignment_group_reduce_typed.pto  vmi_layout_assignment_group_slot_broadcast_load_e2b_b16.pto  vmi_layout_assignment_group_slots_cf_join.pto  vmi_layout_assignment_mask_granularity_f32_f16_store.pto  vmi_layout_assignment_mask_remat.pto  vmi_layout_assignment_mask_use_ensure.pto  vmi_layout_assignment_masked_load_dense_group_users.pto  vmi_layout_assignment_multi_return_conflict_invalid.pto  vmi_layout_assignment_non_load_s32_reduce.pto  vmi_layout_assignment_post_gate_type_attr_invalid.pto  vmi_layout_assignment_reduce_minmaxf.pto  vmi_layout_assignment_store_prefer_lane_stride.pto  vmi_layout_assignment_trunci_lane_stride.pto  vmi_layout_assignment_vdhist.pto  vmi_layout_assignment_widen_f16_store_reduce.pto  vmi_layout_fold_deint4.pto  vmi_layout_fold_load.pto  vmi_layout_fold_masked_store.pto  vmi_layout_fold_store.pto  vmi_layout_gate_extf_support_invalid.pto  vmi_layout_gate_missing_selected_plan_invalid.pto  vmi_layout_gate_type_attr_nested_physical_passthrough.pto  vmi_layout_gate_type_attr_surface_invalid.pto  (+34 more)
test/lit/vmi_new/: __categorize.py  categorize.js  categorize.py  vdhist_verifier_reject_mixed_signedness.pto  vdhist_verifier_reject_signed.pto  vmi_bitcast_total_bits_invalid.pto  vmi_bitwise_float_invalid.pto  vmi_catalog.json  vmi_catalog_oneline.json  vmi_divf_integer_invalid.pto  vmi_e2e_vadd_tail.pto  vmi_e2e_vcvt_widen_add_store.pto  vmi_e2e_vload_dintlv_multichunk.pto  vmi_fma_integer_invalid.pto  vmi_fptosi_saturate_bad_value_invalid.pto  vmi_group_reduce_addi_i16.pto  vmi_group_reduce_addi_i8.pto  vmi_group_reduce_maxi_i8.pto  vmi_iota_element_type_invalid.pto  vmi_iota_order_invalid.pto  vmi_lane_stride_masked_store.pto  vmi_layout_assignment_broadcast_dense_group_users.pto  vmi_layout_assignment_cf_branch.pto  vmi_layout_assignment_cmp_mask_granularity.pto  vmi_layout_assignment_create_group_mask_s32_dynamic.pto  vmi_layout_assignment_dense_f16_f32_store.pto  vmi_layout_assignment_dense_group_reduce_multi_consumer.pto  vmi_layout_assignment_expand_load.pto  vmi_layout_assignment_f32_f8_store_reduce.pto  vmi_layout_assignment_group_broadcast_multi_consumer.pto  vmi_layout_assignment_group_reduce_half_block.pto  vmi_layout_assignment_group_reduce_maxf_quant.pto  vmi_layout_assignment_group_reduce_partial_slots8.pto  vmi_layout_assignment_group_reduce_typed.pto  vmi_layout_assignment_group_slots_cf_join.pto  vmi_layout_assignment_intlv.pto  vmi_layout_assignment_iota_remat.pto  vmi_layout_assignment_mask_granularity_f32_f16_store.pto  vmi_layout_assignment_mask_remat.pto  vmi_layout_assignment_mask_select_store.pto  (+321 more)
test/lit/vpto/: bisheng_vf_auto_sync_cli.pto  fold_tile_buf_intrinsics.pto  memory_consistency_fence_unsupported.pto  ptodsl_vmi_composite_provider.pto  ptodsl_vmi_flash_attention_softmax.pto  ptodsl_vmi_softmax_compute_ops.pto  (+12 more)
test/lit/vpto-soft-postupdate/: delta-iv-vlds.pto  delta-iv-vsts.pto  delta-scaled-offset.pto  loop-multi-op-different-bases.pto  loop-multi-op-same-base.pto  negative-already-post.pto  negative-control-flow.pto  negative-delta-unknown.pto
tools/ptoas/: CMakeLists.txt  LLVMOptionRTTIShim.cpp  ObjectEmission.cpp  driver.cpp  ptoas.cpp  ptoas.h  ptoas_wrapper.py
(+828 files in other folders)
